[package]
name = "ram_simulator_rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ram_simulator = { path = "lib/ram_simulator" }

[[bin]]
name = "example1"
path = "src/examples/example1.rs"

[[bin]]
name = "example2"
path = "src/examples/example2.rs"

[[bin]]
name = "example3"
path = "src/examples/example3.rs"