[package]
name = "ram_simulator_rt"
version = "0.2.0"
edition = "2021"
default-run = "rscli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ram_simulator = { path = "lib/ram_simulator" }

[[bin]]
name = "rscli"
path = "src/rscli/rscli.rs"

[[bin]]
name = "example1"
path = "src/examples/example1.rs"

[[bin]]
name = "example2"
path = "src/examples/example2.rs"

[[bin]]
name = "example3"
path = "src/examples/example3.rs"