[package]
name = "ram_webassembly"
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "WebAssembly interface for the RAM Simulator"
repository = "https://github.de/kernzerfall/ram_simulator_rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ram_simulator = { path = "../ram_simulator" }
wasm-bindgen = "0.2"

[lib]
name = "rswasm"
path = "src/lib.rs"
crate-type = ["cdylib"]